testy,  walidacja oraz poprawki